add lightbox lib and apply lightbox to gallery

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.28",
     "vite-plugin-vuetify": "^1.0.1",
     "vue": "^3.2.45",
+    "vue-easy-lightbox": "^1.11.0",
     "vue-router": "^4.1.6",
     "vuetify": "^3.0.5",
     "webfontloader": "^1.6.28"
