--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
+    "axios": "^1.2.2",
     "pinia": "^2.0.28",
     "vite-plugin-vuetify": "^1.0.1",
     "vue": "^3.2.45",
